--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "satellite.js": "^6.0.0",
     "sateye": "file:",
     "tailwindcss": "^3.4.17",
     "three": "^0.166.1"
